[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvpinns"
version = "1.0.0"
authors = [
  { name="Thivin Anandh", email="thivinanandh@gmail.com" },
  { name="Divij Ghose", email="divijghose@gmail.com" },
  { name="Sashikumaar Ganesan", email="sashi@iisc.ac.in" }
]
description = "A fast tensor-driven variational physics-informed neural network library for solving PDEs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[project.urls]
Homepage = "https://github.com/cmgcds/fastvpinns"
Issues = "https://github.com/cmgcds/fastvpinns/issues"
Documentation = "https://cmgcds.github.io/fastvpinns/"
logo = "https://raw.githubusercontent.com/cmgcds/fastvpinns/main/Fastvpinns_logo.png"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$|\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization = true
skip-magic-trailing-comma = true